fix style overlapped. added in backgroun image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,7 +76,7 @@ header {
     min-height: auto;
     text-align: center;
 
-    background-image: url(leaf.jpg);
+    background-image: url(giftdr.jpg);
     background-position: center;
     background-size: cover;
 }
